# torch_hub

./: .gitignore  CLI.md  README.md  about.md  requirements.txt  torch.py  torch_hub.pyproj
config/: TorchConfig.py  example-config.json
flows/: herbar_flow.py  process_specimen.py
src/: .env.sample  MANIFEST.in  Torch.sln  app.css  app.css.map  app.py  app.scss  launch.json  prebuild.sh  requirements.txt  setup.py  startup.sh  tests.py  torch-agent.py  torch-cli.py  torch-web.py  torch.py
src/torch_hub/: LICENSE  README.md  Torch.Hub.pyproj  __init__.py  pyproject.toml
src/torch_hub/collections/: collections.py  specimens.py  workflow.py
src/torch_hub/institutions/: institutions.py
src/torch_hub/prefect_flows/: process_specimen.py
src/torch_hub/prefect_flows/configs/: flow_template_config.json
src/torch_hub/prefect_flows/tasks/: check_catalog_number.py  check_orientation.py  generate_derivatives.py  herbar.py  save_specimen.py  upload.py
src/torch_hub/prefect_flows/templates/: flow_template.py  task_template.py
src/torch_hub/reports/: reports.py
src/torch_hub/users/: role.py  user.py
tasks/: copy_file.py  csv_files.py  herbar.py  log_new_file_name.py  read_dir.py  upload.py
test_files/: .~lock.nlu_random_urls_20.csv#  brit_random_urls_100.csv  brit_random_urls_20.txt  image_url_notes.txt  nlu_random_urls_20.csv  okla_random_urls_100.txt  vdb_random_urls_100.csv  vdb_random_urls_20.csv
tests/: nlu_random_urls_100.txt  okla_random_urls_20.txt  tests.py  vdb_random_urls_100.txt  vdb_random_urls_20.txt
torch/: requirements.txt  torch.py
(+317 files in other folders)
