[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch_hub"
version = "0.1.1"
authors = [
  { name="Jason Best", email="jbest@brit.org" },
  { name="Joseph Young", email="joseph@sparc.coop" },
]
description = "TORCH Hub Workflow Project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TORCH-TCN/torch_hub"
"Bug Tracker" = "https://github.com/TORCH-TCN/torch_hub/issues"